--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,10 +290,20 @@ background-position: center;
 
 .about-photo-container{
   background-size: cover;
+  animation-delay: .6s;
 }
 
-.project-image: hover{
+.project-image:hover{
   background-size: 115%;
+
+
+  -ms-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    transform: scale(1.2);
+
+    transition: .9s;
 }
 
 /*project-1{
